--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
@@ -29,9 +32,12 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/",
-            "files": [ "app/Http/Helpers/APIResponse.php" ]
-        }
+            "Tests\\": "tests/"
+        },
+        "files": [
+            "app/Http/Helpers/APIResponse.php",
+            "app/Http/Helpers/GenerateEmployeeNumber.php"
+        ]
     },
     "scripts": {
         "post-autoload-dump": [
